--- a/apps/app/globals.css
+++ b/apps/app/globals.css
@@ -1,3 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* body {
+  background-color: #f0f9ff;
+} */
+html,
+body {
+  font-family: "Inter", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #2563eb;
+}
