fix : main page root 폴더 생성
기존에 main page app 최상위 위치했는데, 공통 레이아웃 지정하기 위해
로그인과 회원가입 파일 제외하고 루트 폴더로 이동 시킴

--- a/apps/app/globals.css
+++ b/apps/app/globals.css
@@ -22,3 +22,17 @@ a {
 .MuiStack-root.fade-in {
   display: none;
 }
+
+ul {
+  list-style: none;
+}
+
+#demo-customized-button {
+  font-size: 20px;
+  color: #2d3748;
+  background-color: #f7fafc;
+}
+
+#demo-customized-button:hover {
+  background-color: #e2e8f0;
+}
